# algoliasearch-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  azure-pipelines.yml
.github/workflows/: rust.yml
src/: client.rs  error.rs  lib.rs  macros.rs
src/index/: mod.rs  operation.rs  settings.rs  task.rs
