[package]
name = "algoliasearch"
version = "0.1.2"
authors = ["Nicolas Barbotte <nicolas@barbotte.net>"]
edition = "2018"
description = "Algolia client"
keywords = ["algolia", "client", "search"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/nicompte/algoliasearch-rs"
homepage = "https://github.com/nicompte/algoliasearch-rs"
documentation = "https://docs.rs/algoliasearch"
include = [
    "src/**/*",
    "Cargo.toml",
]

[dependencies]
derive_builder = "0.9.0"
futures = "0.3.1"
reqwest = { version = "0.10.0", features = ["json", "stream"] }
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
serde_repr = "0.1.5"
serde_urlencoded = "0.6.1"
chrono = { version = "0.4.10", features = ["serde"] }

[dev-dependencies]
tokio = { version = "0.2.6", features = ["macros"] }