[package]
name = "algoliasearch"
version = "0.1.4"
authors = ["Nicolas Barbotte <nicolas@barbotte.net>"]
edition = "2018"
description = "Algolia client"
keywords = ["algolia", "client", "search"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/nicompte/algoliasearch-rs"
homepage = "https://github.com/nicompte/algoliasearch-rs"
documentation = "https://docs.rs/algoliasearch"
include = [
    "src/**/*",
    "Cargo.toml",
]

[dependencies]
derive_builder = "0.9.0"
futures = "0.3.5"
reqwest = { version = "0.10.6", features = ["json", "stream"] }
serde = "1.0.111"
serde_derive = "1.0.111"
serde_json = "1.0.53"
serde_repr = "0.1.5"
serde_urlencoded = "0.6.1"
chrono = { version = "0.4.11", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.8.4", features = ["macros"] }