[package]
name = "algoliasearch"
version = "0.1.5"
authors = ["Nicolas Barbotte <nicolas@barbotte.net>"]
edition = "2018"
description = "Algolia client"
keywords = ["algolia", "client", "search"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/nicompte/algoliasearch-rs"
homepage = "https://github.com/nicompte/algoliasearch-rs"
documentation = "https://docs.rs/algoliasearch"
include = ["src/**/*", "Cargo.toml"]

[dependencies]
derive_builder = "0.12"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_repr = "0.1"
serde_urlencoded = "0.7"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
